aws.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc070918dff3be7cdaa": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ansible-training"
          }
        ]
      }
    },
    "subnet0513de4fc81cbc03e": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/28",
        "AvailabilityZone": "eu-west-1a",
        "VpcId": {
          "Ref": "vpc070918dff3be7cdaa"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "ansible-training-1a"
          }
        ]
      }
    },
    "igw0b89a68cdc9d9fbd8": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "ansible-training"
          }
        ]
      }
    },
    "acl0de3e0f8c7151e1e1": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc070918dff3be7cdaa"
        }
      }
    },
    "rtb0dc882abed4207e9d": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc070918dff3be7cdaa"
        }
      }
    },
    "eip34248177150": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": [
        "gw4"
      ],
      "Properties": {
        "Domain": "vpc"
      }
    },
    "instancei060e14a10892f1d46": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-00035f41c82244dab",
        "InstanceType": "t2.micro",
        "KeyName": "ansible-training",
        "Monitoring": "false",
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0513de4fc81cbc03e"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.0.6",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sglaunchwizard2"
              }
            ]
          }
        ]
      }
    },
    "sglaunchwizard2": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "launch-wizard-2 created 2018-11-22T16:33:34.229+01:00",
        "VpcId": {
          "Ref": "vpc070918dff3be7cdaa"
        }
      }
    },
    "acl7": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0de3e0f8c7151e1e1"
        }
      }
    },
    "acl8": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0de3e0f8c7151e1e1"
        }
      }
    },
    "subnetacl5": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0de3e0f8c7151e1e1"
        },
        "SubnetId": {
          "Ref": "subnet0513de4fc81cbc03e"
        }
      }
    },
    "gw4": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc070918dff3be7cdaa"
        },
        "InternetGatewayId": {
          "Ref": "igw0b89a68cdc9d9fbd8"
        }
      }
    },
    "subnetroute8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb0dc882abed4207e9d"
        },
        "SubnetId": {
          "Ref": "subnet0513de4fc81cbc03e"
        }
      }
    },
    "route4": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb0dc882abed4207e9d"
        },
        "GatewayId": {
          "Ref": "igw0b89a68cdc9d9fbd8"
        }
      },
      "DependsOn": "gw4"
    },
    "dchpassoc4": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc070918dff3be7cdaa"
        },
        "DhcpOptionsId": "default"
      }
    },
    "assoc4": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "eip34248177150",
            "AllocationId"
          ]
        },
        "InstanceId": {
          "Ref": "instancei060e14a10892f1d46"
        }
      }
    },
    "ingress5": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sglaunchwizard2"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress6": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sglaunchwizard2"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress4": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sglaunchwizard2"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "Ansible training infra"
}
